fixed z-index on fixed header and footer

--- a/django/website/media/less/internews.less
+++ b/django/website/media/less/internews.less
@@ -62,7 +62,7 @@ body {
   .box-shadow(0 1px 4px rgba(0, 0, 0, 0.3));
   border:none;
   top:0;
-  z-index:@zindex-navbar;
+  z-index:@zindex-navbar-fixed;
 }
 
 @media(min-width:@screen-sm-min) {
@@ -248,6 +248,7 @@ body {
   width: 250px;
   font-size:12.5px;
   margin:0;
+  z-index:@zindex-navbar-fixed;
 }
 
 @media(max-width:@screen-sm){
